@@ -1,3 +1,8 @@
+2013-08-15  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.18.3.
+	* Rules-quot: Upgrade to gettext-0.18.3.
+
 2010-06-24  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Makefile.in.in: Upgrade to gettext-0.18.1.
